browser support and fix flexbox gap in Safari - old version

--- a/css/build-responsive-web/starter/07-Omnifood-Desktop/css/queries.css
+++ b/css/build-responsive-web/starter/07-Omnifood-Desktop/css/queries.css
@@ -128,8 +128,10 @@
     }
 
     .main-nav {
-        background-color: rgba(255, 255, 255, 0.97);
-        position: absolute;
+        background-color: rgba(255, 255, 255, 0.8);
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        position: fixed;
         top: 0;
         left: 0;
         width: 100vw;
@@ -138,7 +140,7 @@
         align-items: center;
         justify-content: center;
         transform: translateX(100%);
-        transition: all 0.5s ease-in;
+        transition: all 0.3s ease-in;
         /* display: none; */
 
         /* 1) hide it visually */
